# rMusic

./: README.md  index.html  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  Dockerfile  tauri.conf.json
src-tauri/src/: main.rs  music.rs
src/components/: MusicPlayer.vue  UserInfo.vue
src/components/CloudDrive/: DriveFile.vue  DriveInfo.vue
src/components/MusicSearch/: MusicInfo.vue  SearchFile.vue
src/layout/: BaseLayout.vue
src/router/: index.js
src/stores/: player.js
src/views/: DriveView.vue  MusicSearch.vue  UserView.vue
