[package]
name = "app"
version = "0.2.1"
description = "A Tauri App"
authors = ["EnableAsync"]
license = ""
repository = "https://github.com/EnableAsync/rMusic"
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.10", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.140", features = ["derive"] }
tauri = { version = "1.0.0-rc.12", features = ["api-all"] }
unm_engine = "0.3.0"
unm_types = "0.3.0"
unm_engine_kuwo = "0.3.0"
env_logger = "0.9.0"
log = "0.4.17"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
